@@ -358,7 +358,7 @@ public class MCRMailer extends MCRServlet {
                 return;
             }
 
-            Thread t = new Thread(() -> {
+            Thread.ofVirtual().start(() -> {
                 for (int i = numTries - 1; i > 0; i--) {
                     LOGGER.info("Retrying in 5 minutes...");
                     try {
@@ -375,7 +375,6 @@ public class MCRMailer extends MCRServlet {
                     }
                 }
             });
-            t.start(); // Try to resend mail in separate thread
         }
     }
 
